test_suite5/ALAN/test_suite/alan-2022-examples/failing/004120_mutation.alan
source cF begin leave * (2) end
